force-app/main/default/objects/Acknowledgement__c.object
<CustomObject>
    <label>Acknowledgement</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Acknowledgement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Acknowledgements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>