force-app/main/default/objects/Acknowledgement__c/fields/AgreementYN__c.field-meta.xml
<CustomField>
    <fullName>AgreementYN__c</fullName>
    <label>AgreementYN</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>