force-app/main/default/objects/Acknowledgement__c/fields/Statement__c.field-meta.xml
<CustomField>
    <fullName>Statement__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Statement</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>