force-app/main/default/objects/Acknowledgement__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Acknowledgement Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AG Acknowledgement</fullName>
            </value>
            <value>
                <fullName>Caretaker Authorization Decision</fullName>
            </value>
            <value>
                <fullName>Contact Information Verification</fullName>
            </value>
            <value>
                <fullName>Credit Transfer Policy</fullName>
            </value>
            <value>
                <fullName>CT Enrollment Commitment</fullName>
            </value>
            <value>
                <fullName>CT Enrollment Intent</fullName>
            </value>
            <value>
                <fullName>CT PLCA</fullName>
            </value>
            <value>
                <fullName>Disciplinary History Affirmation</fullName>
            </value>
            <value>
                <fullName>Emergency Contact No Contact</fullName>
            </value>
            <value>
                <fullName>FERPA Notification</fullName>
            </value>
            <value>
                <fullName>Tech Support Permission</fullName>
            </value>
            <value>
                <fullName>HH Income Parent Signature</fullName>
            </value>
            <value>
                <fullName>Honor Code Agreement (LC)</fullName>
            </value>
            <value>
                <fullName>Honor Code Agreement (Student)</fullName>
            </value>
            <value>
                <fullName>HS FERPA Military Note</fullName>
            </value>
            <value>
                <fullName>Medicaid Statement Agreement</fullName>
            </value>
            <value>
                <fullName>No Tech Confirmation</fullName>
            </value>
            <value>
                <fullName>Receive Equipment</fullName>
            </value>
            <value>
                <fullName>Receive Printer</fullName>
            </value>
            <value>
                <fullName>Receive Subsidy</fullName>
            </value>
            <value>
                <fullName>Receive Equipment Hardship</fullName>
            </value>
            <value>
                <fullName>CT DCA</fullName>
            </value>
            <value>
                <fullName>CT DLCA</fullName>
            </value>
            <value>
                <fullName>CT PAH</fullName>
            </value>
            <value>
                <fullName>Third Grade Reading Waived</fullName>
            </value>
            <value>
                <fullName>Transitional K Acknowledgement</fullName>
            </value>
            <value>
                <fullName>Internet Technology Acknowledgement</fullName>
            </value>
            <value>
                <fullName>Parent Information Notice for California Healthy Youth Act</fullName>
            </value>
            <value>
                <fullName>Parent/Legal Guardian (Caretaker) Acknowledgement</fullName>
            </value>
            <value>
                <fullName>Returning Household Acknowledgement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>