force-app/main/default/objects/Acknowledgement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Agreement__c</columns>
    <columns>Program_Enrollment__c</columns>
    <columns>Question_Group__c</columns>
    <columns>School_Year__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>